--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ code {
   left: 0;
   right: 100px;
 }
+
 .navbar a,
 .footer a {
   color: var(--main-background-color);
@@ -69,6 +70,21 @@ code {
   font-size: small;
 }
 
-.footer span{
+.footer span {
   color: var(--fonts-color);
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+
+
+}
+
+.table th,
+.table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+  border: none;
 }
