--- a/src/index.css
+++ b/src/index.css
@@ -87,3 +87,89 @@ code {
 .buttons:hover {
   background-color: var(--fonts-color);
 }
+
+/* HOME PAGE start */
+/* first screen */
+.screen1-bg {
+  height: 100vh;
+  position: relative;
+  background-image: url('./images/draft.jpg');
+  background-repeat: no-repeat;
+  background-size: auto;
+}
+
+.screen1-moto {
+  position: absolute;
+  padding: 25px;
+  height: 100px;
+  width: 200px;
+  bottom: 20%;
+  right: 10%;
+
+  background-color: rgba(255, 255, 255, .3);  
+  color: black;
+}
+/* carousel screen */
+.carousel-container {
+  height: 350px;
+  padding: 0 15px;
+}
+
+.carusel-item {
+  border: 1px solid black;
+  border-radius: 5px;
+  overflow: hidden;
+  width: 200px;
+  padding: 15px;
+  box-shadow: 5px 5px 1px 5px #ececec;
+}
+
+.carousel-image {
+  height: 150px;
+  width: 100%;
+}
+
+.item-title{
+  font-weight: 600;
+}
+
+/* form screen */
+.discount-section {
+  height: 80vh;
+  position: relative;
+  background-image: url('./images/draft.jpg');
+  background-repeat: no-repeat;
+  background-size: auto;
+}
+
+.inner-text {position: absolute;
+  padding: 25px;
+  height: 50vh;
+  width: 400px;
+  bottom: 10%;
+  left: 30%;
+  text-align: center;
+  background-color: rgba(193, 58, 58, 0.3);  
+  color: black;}
+
+.discount-section h2{
+  font-size: 200% !important;
+  font-weight: normal;
+  color: var(--main-branding-color) !important;
+  text-shadow: 1px 1px 2px var(--fonts-color);
+  text-align: center;
+  padding-top: 60px;
+  padding-right: 20%;
+  padding-left: 20px;
+  letter-spacing: 3px;
+  border-bottom: 1px solid var(--main-color);
+  margin-bottom: 50px;
+}
+
+
+
+
+
+/* last screen */
+
+/* HOME PAGE end */
